--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-hook-form": "^7.53.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "swiper": "^11.2.0"
   },
   "devDependencies": {
     "postcss": "^8",
