--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.6",
-    "swiper": "^11.2.0"
+    "swiper": "^11.2.0",
+    "typeface-bubblegum-sans": "^1.1.13",
+    "typeface-open-sans": "^1.1.13"
   },
   "devDependencies": {
     "postcss": "^8",
