--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
+    "builds": [
+      { "src": "next.config.js", "use": "@vercel/next" }
     ]
   }
   
