--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "framer-motion": "^12.4.2",
     "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
