--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "framer-motion": "^12.4.2",
     "next": "^14.2.23",
     "react": "^18",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
+    "react-select": "^5.10.0",
     "react-toastify": "^10.0.6",
     "swiper": "^11.2.0",
     "typeface-bubblegum-sans": "^1.1.13",
